--- a/source/blender/blenkernel/CMakeLists.txt
+++ b/source/blender/blenkernel/CMakeLists.txt
@@ -170,7 +170,7 @@ set(SRC
   intern/layer.cc
   intern/layer_utils.cc
   intern/lib_id.c
-  intern/lib_id_delete.c
+  intern/lib_id_delete.cc
   intern/lib_id_eval.c
   intern/lib_id_remapper.cc
   intern/lib_override.cc
