--- a/source/blender/blenkernel/CMakeLists.txt
+++ b/source/blender/blenkernel/CMakeLists.txt
@@ -171,7 +171,7 @@ set(SRC
   intern/layer_utils.cc
   intern/lib_id.c
   intern/lib_id_delete.cc
-  intern/lib_id_eval.c
+  intern/lib_id_eval.cc
   intern/lib_id_remapper.cc
   intern/lib_override.cc
   intern/lib_override_proxy_conversion.c
