--- a/source/blender/blenkernel/CMakeLists.txt
+++ b/source/blender/blenkernel/CMakeLists.txt
@@ -174,7 +174,7 @@ set(SRC
   intern/lib_id_eval.cc
   intern/lib_id_remapper.cc
   intern/lib_override.cc
-  intern/lib_override_proxy_conversion.c
+  intern/lib_override_proxy_conversion.cc
   intern/lib_query.c
   intern/lib_remap.c
   intern/library.c
