--- a/source/blender/blenkernel/CMakeLists.txt
+++ b/source/blender/blenkernel/CMakeLists.txt
@@ -299,7 +299,7 @@ set(SRC
   intern/tracking_util.cc
   intern/type_conversions.cc
   intern/undo_system.cc
-  intern/unit.c
+  intern/unit.cc
   intern/vfont.cc
   intern/vfontdata_freetype.cc
   intern/viewer_path.cc
