move softbody.cc back to .c
The corresponding test fails. It seems like some floating point
accuracy changes by the conversion to C++, but it's not clear
where that happens exactly yet.

--- a/source/blender/blenkernel/CMakeLists.txt
+++ b/source/blender/blenkernel/CMakeLists.txt
@@ -266,7 +266,7 @@ set(SRC
   intern/shrinkwrap.cc
   intern/simulation_state.cc
   intern/simulation_state_serialize.cc
-  intern/softbody.cc
+  intern/softbody.c
   intern/sound.cc
   intern/speaker.cc
   intern/studiolight.cc
