Moved volume grid and mask base implementation to BLI.

--- a/source/blender/blenlib/CMakeLists.txt
+++ b/source/blender/blenlib/CMakeLists.txt
@@ -157,6 +157,7 @@ set(SRC
   intern/timeit.cc
   intern/uuid.cc
   intern/uvproject.c
+  intern/volume.cc
   intern/voronoi_2d.c
   intern/voxel.c
   intern/winstuff.c
