move editcurve_paint.c

--- a/source/blender/editors/curve/CMakeLists.txt
+++ b/source/blender/editors/curve/CMakeLists.txt
@@ -22,7 +22,7 @@ set(SRC
   curve_ops.cc
   editcurve.c
   editcurve_add.cc
-  editcurve_paint.c
+  editcurve_paint.cc
   editcurve_pen.c
   editcurve_query.c
   editcurve_select.c
