Cleanup: CMake: Modernize bf_rna dependencies
Pretty straightforward
- Remove any makesrna paths from INC
- Add a dependency though LIB

Not so pretty straightforward:

- bf_rna will build after most libs it depends on but some of those
libs need the RNA_prototypes.h header which as far as CMake knows
only bf_rna relies on, so it is free to generate it "just" before
bf_rna builds, which is problematic for everybody else since the
header may not exist on disk yet.

An additional target is introduced for this bf::rna::prototypes that
gives access to this header, and ensures makesdna runs before anything
that relies on this header tries to use it.

--- a/intern/cycles/blender/CMakeLists.txt
+++ b/intern/cycles/blender/CMakeLists.txt
@@ -5,10 +5,8 @@
 set(INC
   ..
   ../../mikktspace
-  ../../../source/blender/makesrna
   ../../../source/blender/gpu
   ../../../source/blender/render
-  ${CMAKE_BINARY_DIR}/source/blender/makesrna/intern
 )
 
 set(INC_SYS
@@ -60,6 +58,7 @@ set(LIB
   PRIVATE bf::blenlib
   PRIVATE bf::dna
   PRIVATE bf::intern::guardedalloc
+  PRIVATE bf::rna
   cycles_bvh
   cycles_device
   cycles_graph
@@ -140,6 +139,5 @@ endif()
 
 blender_add_lib(bf_intern_cycles "${SRC}" "${INC}" "${INC_SYS}" "${LIB}")
 
-add_dependencies(bf_intern_cycles bf_rna)
 
 delayed_install(${CMAKE_CURRENT_SOURCE_DIR} "${ADDON_FILES}" ${CYCLES_INSTALL_PATH})
