--- a/source/blender/editors/geometry/CMakeLists.txt
+++ b/source/blender/editors/geometry/CMakeLists.txt
@@ -8,13 +8,10 @@ set(INC
   ../../blentranslation
   ../../depsgraph
   ../../functions
-  ../../makesrna
   ../../nodes
   ../../windowmanager
   ../../bmesh
 
-  # RNA_prototypes.h
-  ${CMAKE_BINARY_DIR}/source/blender/makesrna
 )
 
 set(INC_SYS
@@ -35,10 +32,9 @@ set(LIB
   PRIVATE bf::dna
   bf_editor_object
   PRIVATE bf::intern::guardedalloc
+  PRIVATE bf::rna
   bf_windowmanager
 )
 
 blender_add_lib(bf_editor_geometry "${SRC}" "${INC}" "${INC_SYS}" "${LIB}")
 
-# RNA_prototypes.h dna_type_offsets.h
-add_dependencies(bf_editor_geometry bf_rna)
