--- a/source/blender/editors/object/CMakeLists.txt
+++ b/source/blender/editors/object/CMakeLists.txt
@@ -13,7 +13,6 @@ set(INC
   ../../gpu
   ../../ikplugin
   ../../imbuf
-  ../../makesrna
   ../../modifiers
   ../../python
   ../../render
@@ -21,8 +20,6 @@ set(INC
   ../../windowmanager
   ../../../../intern/clog
 
-  # RNA_prototypes.h
-  ${CMAKE_BINARY_DIR}/source/blender/makesrna
 )
 
 set(INC_SYS
@@ -67,6 +64,7 @@ set(LIB
   bf_editor_grease_pencil
   PRIVATE bf::intern::guardedalloc
   bf_render
+  PRIVATE bf::rna
   bf_windowmanager
 )
 
@@ -83,5 +81,3 @@ endif()
 
 blender_add_lib(bf_editor_object "${SRC}" "${INC}" "${INC_SYS}" "${LIB}")
 
-# RNA_prototypes.h
-add_dependencies(bf_editor_object bf_rna)
