--- a/source/blender/editors/render/CMakeLists.txt
+++ b/source/blender/editors/render/CMakeLists.txt
@@ -11,13 +11,10 @@ set(INC
   ../../draw
   ../../gpu
   ../../imbuf
-  ../../makesrna
   ../../nodes
   ../../render
   ../../sequencer
   ../../windowmanager
-  # RNA_prototypes.h
-  ${CMAKE_BINARY_DIR}/source/blender/makesrna
 )
 
 set(SRC
@@ -38,6 +35,7 @@ set(LIB
   PRIVATE bf::dna
   bf_draw
   PRIVATE bf::intern::guardedalloc
+  PRIVATE bf::rna
 )
 
 if(WITH_HEADLESS)
@@ -70,5 +68,3 @@ endif()
 
 blender_add_lib(bf_editor_render "${SRC}" "${INC}" "${INC_SYS}" "${LIB}")
 
-# RNA_prototypes.h
-add_dependencies(bf_editor_render bf_rna)
