--- a/source/blender/nodes/texture/CMakeLists.txt
+++ b/source/blender/nodes/texture/CMakeLists.txt
@@ -10,12 +10,9 @@ set(INC
   ../../blentranslation
   ../../depsgraph
   ../../imbuf
-  ../../makesrna
   ../../render
   ../../windowmanager
   ../../bmesh
-  # RNA_prototypes.h
-  ${CMAKE_BINARY_DIR}/source/blender/makesrna
 )
 
 set(INC_SYS
@@ -62,9 +59,8 @@ set(LIB
   PRIVATE bf::dna
   PRIVATE bf::intern::guardedalloc
   bf_nodes
+  PRIVATE bf::rna
 )
 
 blender_add_lib(bf_nodes_texture "${SRC}" "${INC}" "${INC_SYS}" "${LIB}")
 
-# RNA_prototypes.h
-add_dependencies(bf_nodes_texture bf_rna)
