--- a/source/blender/blenloader/CMakeLists.txt
+++ b/source/blender/blenloader/CMakeLists.txt
@@ -11,7 +11,6 @@ set(INC
   ../editors/include
   ../gpu
   ../imbuf
-  ../makesrna
   ../nodes
   ../render
   ../sequencer
@@ -19,8 +18,6 @@ set(INC
   ../../../intern/clog
   ../bmesh
 
-  # RNA_prototypes.h
-  ${CMAKE_BINARY_DIR}/source/blender/makesrna
 )
 
 set(INC_SYS
@@ -63,6 +60,7 @@ set(LIB
   PRIVATE bf::blenlib
   PRIVATE bf::dna
   PRIVATE bf::intern::guardedalloc
+  PRIVATE bf::rna
 )
 
 if(WITH_BUILDINFO)
@@ -93,8 +91,6 @@ endif()
 
 blender_add_lib(bf_blenloader "${SRC}" "${INC}" "${INC_SYS}" "${LIB}")
 
-# RNA_prototypes.h
-add_dependencies(bf_blenloader bf_rna)
 
 if(WITH_GTESTS)
   set(TEST_SRC
