--- a/source/blender/editors/grease_pencil/CMakeLists.txt
+++ b/source/blender/editors/grease_pencil/CMakeLists.txt
@@ -8,10 +8,7 @@ set(INC
   ../../depsgraph
   ../../gpu
   ../../imbuf
-  ../../makesrna
   ../../windowmanager
-  # RNA_prototypes.h
-  ${CMAKE_BINARY_DIR}/source/blender/makesrna
 )
 
 set(INC_SYS
@@ -31,7 +28,7 @@ set(LIB
   PRIVATE bf::blenlib
   PRIVATE bf::dna
   PRIVATE bf::intern::guardedalloc
+  PRIVATE bf::rna
 )
 
 blender_add_lib(bf_editor_grease_pencil "${SRC}" "${INC}" "${INC_SYS}" "${LIB}")
-add_dependencies(bf_editor_curves bf_rna)
