--- a/source/blender/editors/lattice/CMakeLists.txt
+++ b/source/blender/editors/lattice/CMakeLists.txt
@@ -5,7 +5,6 @@
 set(INC
   ../include
   ../../depsgraph
-  ../../makesrna
   ../../render
   ../../windowmanager
   ../../../../intern/clog
@@ -29,6 +28,7 @@ set(LIB
   PRIVATE bf::blenlib
   PRIVATE bf::dna
   PRIVATE bf::intern::guardedalloc
+  PRIVATE bf::rna
 )
 
 blender_add_lib(bf_editor_lattice "${SRC}" "${INC}" "${INC_SYS}" "${LIB}")
