--- a/source/blender/editors/mask/CMakeLists.txt
+++ b/source/blender/editors/mask/CMakeLists.txt
@@ -6,7 +6,6 @@ set(INC
   ../include
   ../../depsgraph
   ../../gpu
-  ../../makesrna
   ../../windowmanager
 )
 
@@ -32,6 +31,7 @@ set(LIB
   PRIVATE bf::blenlib
   PRIVATE bf::dna
   PRIVATE bf::intern::guardedalloc
+  PRIVATE bf::rna
 )
 
 
