--- a/source/blender/editors/space_outliner/CMakeLists.txt
+++ b/source/blender/editors/space_outliner/CMakeLists.txt
@@ -9,13 +9,10 @@ set(INC
   ../../depsgraph
   ../../gpu
   ../../imbuf
-  ../../makesrna
   ../../sequencer
   ../../windowmanager
   ../../../../intern/clog
 
-  # RNA_prototypes.h
-  ${CMAKE_BINARY_DIR}/source/blender/makesrna
 )
 
 set(INC_SYS
@@ -111,10 +108,9 @@ set(LIB
   PRIVATE bf::dna
   bf_editor_undo
   PRIVATE bf::intern::guardedalloc
+  PRIVATE bf::rna
 )
 
 
 blender_add_lib(bf_editor_space_outliner "${SRC}" "${INC}" "${INC_SYS}" "${LIB}")
 
-# RNA_prototypes.h dna_type_offsets.h
-add_dependencies(bf_editor_space_outliner bf_rna)
