--- a/source/blender/editors/space_script/CMakeLists.txt
+++ b/source/blender/editors/space_script/CMakeLists.txt
@@ -7,7 +7,6 @@ set(INC
   ../../blenloader
   ../../blentranslation
   ../../gpu
-  ../../makesrna
   ../../windowmanager
 
 )
@@ -28,6 +27,7 @@ set(LIB
   PRIVATE bf::blenlib
   PRIVATE bf::dna
   PRIVATE bf::intern::guardedalloc
+  PRIVATE bf::rna
 )
 
 if(WITH_PYTHON)
