--- a/source/blender/editors/space_text/CMakeLists.txt
+++ b/source/blender/editors/space_text/CMakeLists.txt
@@ -8,7 +8,6 @@ set(INC
   ../../blenloader
   ../../blentranslation
   ../../gpu
-  ../../makesrna
   ../../windowmanager
 
 )
@@ -38,6 +37,7 @@ set(LIB
   PRIVATE bf::blenlib
   PRIVATE bf::dna
   PRIVATE bf::intern::guardedalloc
+  PRIVATE bf::rna
 )
 
 
