--- a/source/blender/editors/space_topbar/CMakeLists.txt
+++ b/source/blender/editors/space_topbar/CMakeLists.txt
@@ -7,11 +7,8 @@ set(INC
   ../../blenloader
   ../../blentranslation
   ../../gpu
-  ../../makesrna
   ../../windowmanager
 
-  # RNA_prototypes.h
-  ${CMAKE_BINARY_DIR}/source/blender/makesrna
 )
 
 set(INC_SYS
@@ -26,11 +23,10 @@ set(LIB
   PRIVATE bf::blenlib
   PRIVATE bf::dna
   PRIVATE bf::intern::guardedalloc
+  PRIVATE bf::rna
 )
 
 
 blender_add_lib(bf_editor_space_topbar "${SRC}" "${INC}" "${INC_SYS}" "${LIB}")
 
 
-# RNA_prototypes.h dna_type_offsets.h
-add_dependencies(bf_editor_space_topbar bf_rna)
