--- a/source/blender/geometry/CMakeLists.txt
+++ b/source/blender/geometry/CMakeLists.txt
@@ -6,7 +6,6 @@ set(INC
   .
   ../blentranslation
   ../functions
-  ../makesrna
   ../../../intern/eigen
 )
 
@@ -59,6 +58,7 @@ set(LIB
   PRIVATE bf::blenlib
   PRIVATE bf::dna
   PRIVATE bf::intern::guardedalloc
+  PRIVATE bf::rna
 )
 
 if(WITH_OPENVDB)
