--- a/source/blender/io/stl/CMakeLists.txt
+++ b/source/blender/io/stl/CMakeLists.txt
@@ -10,7 +10,6 @@ set(INC
   ../../bmesh/intern
   ../../depsgraph
   ../../editors/include
-  ../../makesrna
   ../../nodes
   ../../windowmanager
 )
@@ -39,6 +38,7 @@ set(LIB
   PRIVATE bf::dna
   PRIVATE bf::intern::guardedalloc
   bf_io_common
+  PRIVATE bf::rna
 )
 
 blender_add_lib(bf_stl "${SRC}" "${INC}" "${INC_SYS}" "${LIB}")
