--- a/source/blender/simulation/CMakeLists.txt
+++ b/source/blender/simulation/CMakeLists.txt
@@ -8,7 +8,6 @@ set(INC
   ../depsgraph
   ../functions
   ../imbuf
-  ../makesrna
   ../nodes
 )
 
@@ -34,6 +33,7 @@ set(LIB
   PRIVATE bf::blenlib
   PRIVATE bf::dna
   PRIVATE bf::intern::guardedalloc
+  PRIVATE bf::rna
 )
 
 if(WITH_OPENMP_STATIC)
